--- a/test.html
+++ b/test.html
@@ -39,12 +39,15 @@ vertical-align: text-top;
 }
 body{
 line-height:2;
-column-width: auto;
-column-count: auto;
+
 }
+	#content{
+		column-width: auto;
+column-count: auto;
 </style>
 </head>
 <body>
+<div id="content">	
 <h3>Features of the Absurd Theatre</h3>
 <ul>
 <li onclick="getText(this);return false;">The use of Absurd themes in drama was first discussed by <b>Martin Esslin</b> in <i>The Theatre of the Absurd</i> (1961)</li>
@@ -89,6 +92,7 @@ column-count: auto;
 <td>STATIC</td>
 </tr>
 </table> 
+	</div>
 </body>
 </html>
 
