--- a/test.html
+++ b/test.html
@@ -42,9 +42,11 @@ line-height:2;
 
 }
 	#content{
-		column-width: 100vw;
+		column-width: 999;
 column-count: auto;
-		width: 100vw;
+		width: 999;
+		height: 999;
+	}
 </style>
 </head>
 <body>
