--- a/test.html
+++ b/test.html
@@ -46,6 +46,8 @@ overflow-y: hidden;
 column-count: auto;
 		width: 999;
 		height: 999;
+		overflow-x: scroll;
+		overflow-y: hidden;
 	}
 </style>
 </head>
