--- a/test.html
+++ b/test.html
@@ -47,9 +47,14 @@ vertical-align: text-top;
 .thunderbolt li:before {
    content: "\2713"; margin-left: -20px; margin-right: 10px;
 }
+	html{
+		box-sizing: border-box;
+		overflow-y: hidden;
+	}
 body{
 line-height:2;
 overflow-y: hidden;
+	box-sizing: border-box;
 }
 	#content{
 		column-width: 999;
