--- a/test.html
+++ b/test.html
@@ -60,7 +60,7 @@ overflow-y: hidden;
 		column-width: 999;
 column-count: auto;
 		height: 999;
-		
+		width: 999;
 		overflow-y: hidden;
 		box-sizing: border-box;
 	}
