--- a/test.html
+++ b/test.html
@@ -2,7 +2,10 @@
 <html>
 <head>
 <script type="text/javascript">
-
+function scrollContentBy(distance)
+	{
+		document.getElementById("content").scrollBy(distance,00;
+	}
 var getImage = function (image) {
 	window.location = "viewimage:"+image.src;
 	console.log("viewimage:"+image.src);
