--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <script type="text/javascript">
-function scrollContentBy(distance)
+var scrollContentBy = function (distance)
 	{
 		document.getElementById("content").scrollBy(distance,00;
 	}
