--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@ var scrollContentBy = function (distance)
 	{
 		document.getElementById("content").scrollBy(distance,00;
 	}
-var getImage = function (image) {
+function getImage (image) {
 	Android.showImage(image.src);
 };
 var getText = function (element){
@@ -115,6 +115,11 @@ column-count: auto;
 </tr>
 </table> 
 	</div>
+	<script>
+		function getImage (image) {
+	Android.showImage(image.src);
+};
+	</script>
 </body>
 </html>
 
